welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: ')' expected but ';' found.
      if(get(y) == y-1){setPos(getX()+1; 0)}
                                       ^ColumnByColumn:21: error: ';' expected but ')' found.
      if(get(y) == y-1){setPos(getX()+1; 0)}
                                          ^